--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -35,12 +35,18 @@
     "## **Note** There are two parts in this lab. Parts 1 is for all the students. Part 2 is an additional requirement intended for EECE.5860 students only. There are some questions for each part, and you need to answer them in your lab report.\n",
     "\n",
     "\n",
-    "## Part 1:   LLoRA Fine-Tuning and Quantitative Evaluation of Models (10 points)\n",
+    "## Part 1:   LoRA Fine-Tuning and Quantitative Evaluation of Models (10 points)\n",
     "\n",
     "Complete the [Lab2Part1-LoRA-ROUGE.ipynb](Lab2Part1-LoRA-ROUGE.ipynb) to experiment with LoRA fine-tuning. There are missing codes in the given notebook, and you will add the missing code by following the instructions in the notebook. You goal is to compare the performance of the fine-tuned model with the original model. Evaluate the models using quantitative metrics such as ROUGE scores. Your notebook will be graded as follows:\n",
     "\n",
     "* performs LoRA fine-tuning successfully (6 points)\n",
     "* calculates the aggregated ROUGE scores (rouge1, rouge2, rougeL, rougeLsum) using 15 rows of test data. That is, you will use the summaries generated for the 15 prompts from the test dataset, and their corresponding 15 reference summaries, to compute the aggregated ROUGE scores (4 points)\n",
+    "\n",
+    "### Questions: \n",
+    "\n",
+    "(1) What are the key components and hyperparameters defined in the LoraConfig for model fine-tuning, and what do they control?\n",
+    "\n",
+    "(2) What does the ROUGE metric evaluate in the context of summarization, and how do the scores from rouge1, rouge2, rougeL, and rougeLsum differ in what they measure? Do you see any changes of ROUGE scores before and after the fine-tuning?\n",
     "\n",
     "## Part 2: Model Fine-Tuning with RLHF and PPO (10 points)\n",
     "\n",
@@ -49,6 +55,13 @@
     "* You use PPOTrainer to implement RLHF based fine-tuning to detoxify the fine-tuned model. (3 points)\n",
     "* You show the improvement of the fine-tuned model by computing the mean and standard deviation of Toxicity scores of before and after. (3 points)\n",
     "\n",
+    "### Questions: \n",
+    "\n",
+    "(1)  What criteria are used to filter the dialogues in build_dataset, and how does this filtering affect the quality and suitability of the dataset for training?\n",
+    "\n",
+    "(2) In the reward modeling phase, how is the “not hate” logit used as a reward signal, and what are the advantages and limitations of using this single-class output in training a dialogue model?\n",
+    "\n",
+    "(3) During the PPO training loop, how does the use of a reference model (ref_model) help stabilize training, and what risks might arise if the reference model is omitted?\n",
     "\n",
     "# Lab submission \n",
     "\n",
