--- a/Lab2Part1-LoRA-ROUGE.ipynb
+++ b/Lab2Part1-LoRA-ROUGE.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "print(100*'-')\n",
     "# TODO: compute and print out the rouge scores including rouge1, rouge2, rougeL and rougeLsum\n",
-    "# TODO: you can refer to the exercise that computes rouge scores\n",
+    "# TODO: you can refer to https://huggingface.co/spaces/evaluate-metric/rouge/blob/main/README.md#how-to-use\n",
     "# print(...)\n",
     "\n",
     "print(100*'-')\n"
