--- a/Lab2Part2-RLHF-PPO.ipynb
+++ b/Lab2Part2-RLHF-PPO.ipynb
@@ -331,17 +331,17 @@
     "\n",
     "#TODO: perform model inference on the input tokens\n",
     "#TODO: and capture the logits (the outputs from the last level of the neural network)\n",
-    "#NOTE: please refer to lecture slides\n",
+    "#NOTE: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# logits = ...\n",
     "print(f'logits [not hate, hate]: {logits.tolist()[0]}')\n",
     "\n",
     "#TODO: Print the probabilities for [not hate, hate]\n",
-    "#TODO: please refer to lecture slides\n",
+    "#TODO: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# probabilities = ...\n",
     "print(f'probabilities [not hate, hate]: {probabilities}')\n",
     "\n",
     "# get the logits for \"not hate\" - this is the reward!\n",
-    "# TODO: please refer to lecture slides\n",
+    "# TODO: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# not_hate_index = ...\n",
     "# nothate_reward = ...\n",
     "print(f'reward (high): {nothate_reward}')"
@@ -363,17 +363,17 @@
     "\n",
     "#TODO: perform model inference on the input tokens\n",
     "#TODO: and capture the logits (the outputs from the last level of the neural network)\n",
-    "#NOTE: please refer to lecture slides\n",
+    "#NOTE: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# logits = ...\n",
     "print(f'logits [not hate, hate]: {logits.tolist()[0]}')\n",
     "\n",
     "#TODO: Print the probabilities for [not hate, hate]\n",
-    "#TODO: please refer to lecture slides\n",
+    "#TODO: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# probabilities = ...\n",
     "print(f'probabilities [not hate, hate]: {probabilities}')\n",
     "\n",
     "# get the logits for \"not hate\" - this is the reward!\n",
-    "# TODO: please refer to lecture slides\n",
+    "# TODO: please refer to the Toxicity_Detector_by_Meta.ipynb notebook (https://github.com/ACANETS/genai-labs/blob/main/Toxicity_Detector_by_Meta.ipynb)\n",
     "# not_hate_index = ...\n",
     "# nothate_reward = ...\n",
     "print(f'reward (high): {nothate_reward}')"
