--- a/ControlNet_PythonCodeTutorial.ipynb
+++ b/ControlNet_PythonCodeTutorial.ipynb
@@ -23,10 +23,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "8_55MSKhrtss",
+    "outputId": "44fe5aac-1542-4f19-b926-6fee990835e9"
+   },
+   "outputs": [],
    "source": [
-    "**Note:** Please select the \"PyTorch 2.7\" kernel when running this notebook"
+    "%pip install -U diffusers transformers accelerate"
    ]
   },
   {
@@ -41,7 +49,8 @@
    },
    "outputs": [],
    "source": [
-    "%pip install transformers diffusers accelerate controlnet_aux opencv-contrib-python"
+    "%pip install -U  controlnet_aux\n",
+    "%pip install opencv-contrib-python"
    ]
   },
   {
@@ -51,15 +60,6 @@
    },
    "source": [
     "# Open Pose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -675,21 +675,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "tXShSB0Fd7qd"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "9dW5PCk0d7t7"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "fwnnyHq3oi7O"
    },
    "source": [
     "# Canny"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -1019,21 +1028,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "-Yti9Dg8ofxd"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "-o-9jxdtpvgi"
    },
    "source": [
     "# Depth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -1193,15 +1202,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "vZ8NidcHryYF"
    },
@@ -1291,12 +1291,12 @@
     "\n",
     "# load the controlnet model for normal maps\n",
     "controlnet = ControlNetModel.from_pretrained(\n",
-    "    \"fusing/stable-diffusion-v1-5-controlnet-normal\", torch_dtype=torch.float16,\n",
+    "    \"fusing/stable-diffusion-v1-5-controlnet-normal\", torch_dtype=torch.float16\n",
     ")\n",
     "\n",
     "# load the stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
-    "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16,\n",
+    "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
     ").to(\"xpu\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
@@ -1314,7 +1314,7 @@
    },
    "outputs": [],
    "source": [
-    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/06/07/13/02/butterfly-8047187_640.jpg\").convert(\"RGB\")\n",
+    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/06/07/13/02/butterfly-8047187_1280.jpg\")\n",
     "image_input"
    ]
   },
@@ -1425,15 +1425,6 @@
    },
    "source": [
     "# Segmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -1716,7 +1707,7 @@
    },
    "outputs": [],
    "source": [
-    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/02/24/07/14/crowd-7810353_640.jpg\")\n",
+    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/02/24/07/14/crowd-7810353_1280.jpg\")\n",
     "image_input"
    ]
   },
@@ -1814,6 +1805,15 @@
     "image_output = pipe(\"Aliens looking at earth from inside their spaceship from a window, not creepy, not scary, not gross, octane render, smooth\", image_seg, num_inference_steps=20).images[0]\n",
     "image_output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "kXmBKD8G7WRU"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1830,9 +1830,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "PyTorch 2.7",
+   "display_name": "PyTorch 2.6",
    "language": "python",
-   "name": "pytorch27"
+   "name": "pytorch-2.6"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1844,7 +1844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
