--- a/Lab3Part2-langgraph-agent.ipynb
+++ b/Lab3Part2-langgraph-agent.ipynb
@@ -24,7 +24,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "%pip install --upgrade langchain langgraph langchain-community langchain-huggingface langchain-nvidia-ai-endpoints wikipedia numexpr pypdf"
+    "%pip install --upgrade langchain langgraph langchain-community langchain-huggingface langchain-nvidia-ai-endpoints wikipedia numexpr pypdf sentence-transformers"
    ]
   },
   {
