Modified notebooks for CUDA

--- a/LLM_Basics_with_HF.ipynb
+++ b/LLM_Basics_with_HF.ipynb
@@ -98,21 +98,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "2_bahJBmwvSp"
-   },
-   "source": [
-    "### Log into Hugging Face Hub"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "2_bahJBmwvSp"
+   },
+   "source": [
+    "### Log into Hugging Face Hub"
    ]
   },
   {
@@ -150,16 +150,11 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "#model_id = \"google/gemma-1.1-2b-it\"\n",
-    "# model_id = \"google/gemma-2-2b-it\"\n",
-    "model_id = \"google/gemma-2-9b-it\"\n",
-    "#model_id = \"google/gemma-2-27b-it\"\n",
-    "#model_id = \"meta-llama/Llama-2-7b-hf\"\n",
     "\n",
-    "USE_CPU = False\n",
-    "device = \"xpu:0\" if torch.xpu.is_available() else \"cpu\"\n",
-    "if USE_CPU:\n",
-    "    device = \"cpu\"\n",
+    "model_id = \"google/gemma-2-2b-it\"\n",
+    "\n",
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
     "print(f\"using device: {device}\")"
    ]
   },
@@ -174,7 +169,7 @@
     "# Let's load the tokenizer first\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)"
+    "tokenizer = AutoTokenizer.from_pretrained(model_id, device_map=\"auto\")"
    ]
   },
   {
@@ -191,7 +186,7 @@
     "# But to simplify the process, we won't quantize it in this notebook\n",
     "\n",
     "# Let's load the chosen model\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id).to(device)\n"
+    "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\")\n"
    ]
   },
   {
@@ -256,9 +251,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "PyTorch GPU",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -270,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
