--- a/Lab2Part2-RLHF-PPO.ipynb
+++ b/Lab2Part2-RLHF-PPO.ipynb
@@ -35,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6243c037-f958-4090-bd13-c53c556107c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {
     "tags": []
    },
@@ -86,14 +85,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_CPU = False\n",
-    "device = \"xpu\" if torch.xpu.is_available() else \"cpu\"\n",
-    "if USE_CPU:\n",
-    "    device = \"cpu\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"using device: {device}\")"
    ]
   },
@@ -222,7 +218,7 @@
     ")\n",
     "\n",
     "#TODO: create tokenizer using AutoTokenizer class\n",
-    "#NOTE: you need to set device_map argument properly to choose XPU device\n",
+    "#NOTE: you need to set device_map argument properly to choose device\n",
     "# tokenizer = ...\n",
     "\n",
     "#TODO: create model using AutoModelForSeq2SeqLM class\n",
@@ -569,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "![](img/rlhf_kl_divergence.png)"
@@ -590,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "source": [
     "### Fine-Tune the Model"
@@ -627,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {
     "tags": []
    },
@@ -692,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "source": [
     "## Evaluate the Model Quantitatively"
@@ -701,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {
     "tags": []
    },
@@ -718,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "36",
    "metadata": {
     "tags": []
    },
@@ -743,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,9 +751,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.7",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch27"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -769,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
