--- a/Lab3Part2-langgraph-agent.ipynb
+++ b/Lab3Part2-langgraph-agent.ipynb
@@ -24,7 +24,16 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "%pip install --upgrade langchain langgraph langchain-community langchain-huggingface langchain-nvidia-ai-endpoints wikipedia numexpr pypdf sentence-transformers"
+    "%pip install --upgrade langchain langgraph langchain-community langchain-huggingface langchain-nvidia-ai-endpoints wikipedia numexpr pypdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -69,7 +78,7 @@
     "# The tool leverages a few APIs that you see in the simple_rag.ipynb example, including\n",
     "# RecursiveCharacterTextSplitter(), VectorstoreIndexCreator(), vectorstore.similarity_search()\n",
     "#\n",
-    "loader = PyPDFLoader(\"https://arxiv.org/pdf/2501.12948.pdf\")\n",
+    "loader = PyPDFLoader(\"https://arxiv.org/pdf/2501.12948\")\n",
     "docs = loader.load()\n",
     "# TODO: call  RecursiveCharacterTextSplitter() using chunk_size and overlap\n",
     "# text_splitter = ...\n",
@@ -133,7 +142,7 @@
     "]\n",
     "print(tool_models)\n",
     "\n",
-    "llm_nvidia = ChatNVIDIA(model=\"meta/llama-3.1-405b-instruct\",\n",
+    "llm_nvidia = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\",\n",
     "                           temperature=0.1,\n",
     "                            max_tokens=512,\n",
     "                            top_p=1.0,)"
@@ -142,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,9 +233,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.6",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-2.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
