--- a/ControlNet_PythonCodeTutorial.ipynb
+++ b/ControlNet_PythonCodeTutorial.ipynb
@@ -23,18 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8_55MSKhrtss",
-    "outputId": "44fe5aac-1542-4f19-b926-6fee990835e9"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%pip install -U diffusers transformers accelerate"
+    "**Note:** Please select the \"PyTorch 2.7\" kernel when running this notebook"
    ]
   },
   {
@@ -49,8 +41,16 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -U  controlnet_aux\n",
-    "%pip install opencv-contrib-python"
+    "%pip install transformers diffusers accelerate controlnet_aux opencv-contrib-python ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -318,7 +318,7 @@
     "# define stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
     "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
-    ").to(\"xpu\")\n",
+    ").to(\"cuda\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
   },
@@ -424,7 +424,7 @@
     "        self.controlnet = controlnet\n",
     "        self.image_processor = image_processor\n",
     "        self.control_image_processor = control_image_processor\n",
-    "        self.device = 'xpu' if torch.xpu.is_available() else 'cpu'\n",
+    "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "\n",
     "\n",
@@ -488,7 +488,7 @@
     "        \"\"\"denoises latents from noisy latent to a meaningful latent as conditioned by controlnet\"\"\"\n",
     "\n",
     "        # use autocast for automatic mixed precision (AMP) inference\n",
-    "        with autocast('xpu'):\n",
+    "        with autocast('cuda'):\n",
     "            for i, t in tqdm(enumerate(timesteps)):\n",
     "                # duplicate image latents to do classifier free guidance\n",
     "                latent_model_input = torch.cat([latents] * 2)\n",
@@ -673,24 +673,6 @@
     "images_custom = custom_pipe(\"A professional ice skater wearing a dark blue jacket around sunset, realistic, UHD\", image_pose, num_inference_steps=20)\n",
     "images_custom[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tXShSB0Fd7qd"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "9dW5PCk0d7t7"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -916,7 +898,7 @@
     "# load the stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
     "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
-    ").to(\"xpu\")\n",
+    ").to(\"cuda\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
   },
@@ -1028,15 +1010,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "-Yti9Dg8ofxd"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "-o-9jxdtpvgi"
@@ -1084,7 +1057,7 @@
     "# load the stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
     "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
-    ").to(\"xpu\")\n",
+    ").to(\"cuda\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
   },
@@ -1291,13 +1264,13 @@
     "\n",
     "# load the controlnet model for normal maps\n",
     "controlnet = ControlNetModel.from_pretrained(\n",
-    "    \"fusing/stable-diffusion-v1-5-controlnet-normal\", torch_dtype=torch.float16\n",
+    "    \"fusing/stable-diffusion-v1-5-controlnet-normal\", torch_dtype=torch.float16,\n",
     ")\n",
     "\n",
     "# load the stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
-    "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
-    ").to(\"xpu\")\n",
+    "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16,\n",
+    ").to(\"cuda\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
   },
@@ -1314,7 +1287,7 @@
    },
    "outputs": [],
    "source": [
-    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/06/07/13/02/butterfly-8047187_1280.jpg\")\n",
+    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/06/07/13/02/butterfly-8047187_640.jpg\").convert(\"RGB\")\n",
     "image_input"
    ]
   },
@@ -1525,7 +1498,7 @@
     "# load the stable diffusion pipeline with controlnet\n",
     "pipe = StableDiffusionControlNetPipeline.from_pretrained(\n",
     "    \"runwayml/stable-diffusion-v1-5\", controlnet=controlnet, safety_checker=None, torch_dtype=torch.float16\n",
-    ").to(\"xpu\")\n",
+    ").to(\"cuda\")\n",
     "pipe.scheduler = UniPCMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
   },
@@ -1707,7 +1680,7 @@
    },
    "outputs": [],
    "source": [
-    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/02/24/07/14/crowd-7810353_1280.jpg\")\n",
+    "image_input = load_image(\"https://cdn.pixabay.com/photo/2023/02/24/07/14/crowd-7810353_640.jpg\")\n",
     "image_input"
    ]
   },
@@ -1805,15 +1778,6 @@
     "image_output = pipe(\"Aliens looking at earth from inside their spaceship from a window, not creepy, not scary, not gross, octane render, smooth\", image_seg, num_inference_steps=20).images[0]\n",
     "image_output"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "kXmBKD8G7WRU"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1830,9 +1794,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "PyTorch 2.6",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-2.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1844,7 +1808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
