--- a/Handwritten_Digit_Recognition.ipynb
+++ b/Handwritten_Digit_Recognition.ipynb
@@ -39,6 +39,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,15 +59,11 @@
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\n",
-    "    \"ignore\", category=UserWarning, module=\"intel_extension_for_pytorch\"\n",
-    ")\n",
-    "warnings.filterwarnings(\n",
     "    \"ignore\", category=UserWarning, module=\"torchvision.io.image\", lineno=13\n",
     ")\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
-    "import intel_extension_for_pytorch as ipex\n",
     "import torchvision\n",
     "import matplotlib.pyplot as plt\n",
     "from time import time"
@@ -78,8 +83,8 @@
    "outputs": [],
    "source": [
     "device_type = \"cpu\"\n",
-    "if torch.xpu.is_available():\n",
-    "    device_type = \"xpu\"\n",
+    "if torch.cuda.is_available():\n",
+    "    device_type = \"cuda\"\n",
     "elif torch.backends.mps.is_available():\n",
     "    device_type = \"mps\"\n",
     "device = torch.device(device_type)\n",
@@ -95,15 +100,6 @@
    "source": [
     "### Download The Dataset & Define The Transforms\n",
     "#### or use local data if already downloaded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -287,9 +283,9 @@
     "images, labels = next(iter(trainloader))\n",
     "images = images.view(images.shape[0], -1)\n",
     "\n",
-    "if device_type == \"xpu\":\n",
-    "    logps = model(images.xpu())\n",
-    "    loss = criterion(logps, labels.xpu())\n",
+    "if device_type == \"cuda\":\n",
+    "    logps = model(images.cuda())\n",
+    "    loss = criterion(logps, labels.cuda())\n",
     "elif device_type == \"mps\":\n",
     "    images = images.to(device)\n",
     "    labels = labels.to(device)\n",
@@ -357,9 +353,9 @@
     "optimizer.zero_grad()\n",
     "\n",
     "# Forward pass, then backward pass, then update weights\n",
-    "if device_type == \"xpu\":\n",
-    "    output = model(images.xpu())\n",
-    "    loss = criterion(output, labels.xpu())\n",
+    "if device_type == \"cuda\":\n",
+    "    output = model(images.cuda())\n",
+    "    loss = criterion(output, labels.cuda())\n",
     "elif device_type == \"mps\":\n",
     "    output = model(images.to(device))\n",
     "    loss = criterion(output, labels.to(device))\n",
@@ -423,9 +419,9 @@
     "        # Training pass\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        if device_type == \"xpu\":\n",
-    "            output = model(images.xpu())\n",
-    "            loss = criterion(output, labels.xpu())\n",
+    "        if device_type == \"cuda\":\n",
+    "            output = model(images.cuda())\n",
+    "            loss = criterion(output, labels.cuda())\n",
     "        elif device_type == \"mps\":\n",
     "            output = model(images.to(device))\n",
     "            loss = criterion(output, labels.to(device))\n",
@@ -488,8 +484,8 @@
     "img = images[0].view(1, 784)\n",
     "# Turn off gradients to speed up this part\n",
     "with torch.no_grad():\n",
-    "    if device_type == \"xpu\":\n",
-    "        logps = model(img.xpu())\n",
+    "    if device_type == \"cuda\":\n",
+    "        logps = model(img.cuda())\n",
     "    elif device_type == \"mps\":\n",
     "        logps = model(img.to(device))\n",
     "\n",
@@ -533,7 +529,7 @@
     "        if device_type == \"mps\":\n",
     "            logps = model(img.to(device))\n",
     "        else:\n",
-    "            logps = model(img.xpu())\n",
+    "            logps = model(img.cuda())\n",
     "        \n",
     "    # Output of the network are log-probabilities, need to take exponential for probabilities\n",
     "    ps = torch.exp(logps)\n",
@@ -558,9 +554,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "PyTorch GPU",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -572,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
