--- a/Toxicity_Detector_by_Meta.ipynb
+++ b/Toxicity_Detector_by_Meta.ipynb
@@ -80,20 +80,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "A9sUQ4WrP-Yr"
-   },
-   "outputs": [],
-   "source": [
-    "# import necessary packages\n",
-    "import os\n",
-    "import sys\n",
-    "import torch"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "iwjo5_Uucxkw"
@@ -111,8 +97,16 @@
    },
    "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install --upgrade -q transformers huggingface_hub peft \\\n",
-    "  accelerate bitsandbytes datasets trl ipywidgets evaluate"
+    "%pip install transformers huggingface_hub peft accelerate bitsandbytes datasets trl ipywidgets evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -172,25 +166,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "w_z4600bwvSq"
    },
    "outputs": [],
    "source": [
-    "#device = \"cuda\"\n",
-    "USE_CPU = False\n",
-    "device = \"xpu:0\" if torch.xpu.is_available() else \"cpu\"\n",
-    "if USE_CPU:\n",
-    "    device = \"cpu\"\n",
+    "import torch\n",
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"using device: {device}\")"
    ]
   },
@@ -332,9 +314,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "PyTorch 2.7",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch27"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -346,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
