--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -12,7 +12,8 @@
    },
    "source": [
     "SPDX-License-Identifier: Apache-2.0\n",
-    "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>"
+    "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>\n",
+    "NOTICE: Original was modified to support NVIDIA GPUs"
    ]
   },
   {
@@ -50,29 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "!echo \"Installation in progress...\"\n",
-    "# import sys\n",
-    "# !{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
-    "# !conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
-    "#     accelerate==0.23.0 \\\n",
-    "#     validators==0.22.0 \\\n",
-    "#     diffusers==0.18.2 \\\n",
-    "#     transformers==4.32.1 \\\n",
-    "#     tensorboardX \\\n",
-    "#     pillow \\\n",
-    "#     ipywidgets \\\n",
-    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
-    "import sys\n",
-    "# !{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1 \n",
-    "#!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
+    "%pip install transformers accelerate validators diffusers tensorboardX pillow ipywidgets invisible-watermark\n",
     "!echo \"Installtion complete...\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +87,6 @@
     "import requests\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import intel_extension_for_pytorch as ipex  # adds xpu namespace to PyTorch, enabling you to use Intel GPUs\n",
     "import validators\n",
     "import numpy as np\n",
     "\n",
@@ -112,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "source": [
     "---\n",
@@ -122,9 +107,7 @@
     "For those curious about how all of this works, here's a deeper dive into the code. Don't worry if you're not tech-savvy; you don't need to understand this to use the notebook. But for those interested, let's explore:\n",
     "\n",
     "- **Class Definition**: We've defined a class `Img2ImgModel` that does the heavy lifting. It sets up and optimizes the Stable Diffusion model for image transformations based on text prompts.\n",
-    "  \n",
-    "- **Optimization**: For best performance, the model is optimized using Intel-specific techniques in the `_optimize_pipeline` and `optimize_pipeline` methods using Intel Extension For PyTorch.\n",
-    "  \n",
+    "    \n",
     "- **Image Generation**: The heart of this class, `generate_images`, takes in a text prompt and an image URL. It then generates new images based on the text's instructions, applying various parameters like strength of transformation and guidance scale.\n",
     "\n",
     "Feel free to explore the code below, and if you're inclined, you can see how we've implemented and optimized it for Intel GPUs.\n",
@@ -136,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -154,9 +137,8 @@
     "    def __init__(\n",
     "        self,\n",
     "        model_id_or_path: str,\n",
-    "        device: str = \"xpu\",\n",
+    "        device: str = \"cuda\",\n",
     "        torch_dtype: torch.dtype = torch.bfloat16,\n",
-    "        optimize: bool = True,\n",
     "        warmup: bool = False,\n",
     "        scheduler: bool = True,\n",
     "    ) -> None:\n",
@@ -165,24 +147,14 @@
     "\n",
     "        Args:\n",
     "            model_id_or_path (str): The ID or path of the pre-trained model.\n",
-    "            device (str, optional): The device to run the model on. Defaults to \"xpu\".\n",
+    "            device (str, optional): The device to run the model on. Defaults to \"cuda\".\n",
     "            torch_dtype (torch.dtype, optional): The data type to use for the model. Defaults to torch.float16.\n",
-    "            optimize (bool, optional): Whether to optimize the model. Defaults to True.\n",
     "        \"\"\"\n",
     "        self.device = device\n",
     "        self.data_type = torch_dtype\n",
     "        self.scheduler = scheduler\n",
     "        self.generator = torch.Generator()  # .manual_seed(99)\n",
     "        self.pipeline = self._load_pipeline(model_id_or_path, torch_dtype)\n",
-    "        if optimize:\n",
-    "            start_time = time.time()\n",
-    "            #print(\"Optimizing the model...\")\n",
-    "            self.optimize_pipeline()\n",
-    "            #print(\n",
-    "            #    \"Optimization completed in {:.2f} seconds.\".format(\n",
-    "            #        time.time() - start_time\n",
-    "            #    )\n",
-    "            #)\n",
     "        if warmup:\n",
     "            self.warmup_model()\n",
     "\n",
@@ -228,40 +200,6 @@
     "        pipeline = pipeline.to(self.device)\n",
     "        #print(\"Model loaded.\")\n",
     "        return pipeline\n",
-    "\n",
-    "    \n",
-    "    def _optimize_pipeline(self, pipeline: StableDiffusionImg2ImgPipeline) -> StableDiffusionImg2ImgPipeline:\n",
-    "        \"\"\"\n",
-    "        Optimize the pipeline of the model.\n",
-    "\n",
-    "        Args:\n",
-    "            pipeline (StableDiffusionImg2ImgPipeline): The pipeline to optimize.\n",
-    "\n",
-    "        Returns:\n",
-    "            StableDiffusionImg2ImgPipeline: The optimized pipeline.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        for attr in dir(pipeline):\n",
-    "            try:\n",
-    "                if isinstance(getattr(pipeline, attr), nn.Module):\n",
-    "                    setattr(\n",
-    "                        pipeline,\n",
-    "                        attr,\n",
-    "                        ipex.optimize(\n",
-    "                            getattr(pipeline, attr).eval(),\n",
-    "                            dtype=pipeline.text_encoder.dtype,\n",
-    "                            inplace=True,\n",
-    "                        ),\n",
-    "                    )\n",
-    "            except AttributeError:\n",
-    "                pass\n",
-    "        return pipeline\n",
-    "\n",
-    "    def optimize_pipeline(self) -> None:\n",
-    "        \"\"\"\n",
-    "        Optimize the pipeline of the model.\n",
-    "        \"\"\"\n",
-    "        self.pipeline = self._optimize_pipeline(self.pipeline)\n",
     "\n",
     "    def get_image_from_url(self, url: str, path: str) -> Image.Image:\n",
     "        \"\"\"\n",
@@ -344,7 +282,7 @@
     "        init_image = self.get_image_from_url(image_url, input_image_path)\n",
     "        init_images = [init_image for _ in range(batch_size)]\n",
     "        for i in range(0, num_images, batch_size):\n",
-    "            with torch.xpu.amp.autocast(\n",
+    "            with torch.cuda.amp.autocast(\n",
     "                enabled=True if self.data_type != torch.float32 else False,\n",
     "                dtype=self.data_type,\n",
     "            ):\n",
@@ -377,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "source": [
     "---\n",
@@ -401,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -483,7 +421,7 @@
     "            print(\"Once generated, images will be saved to `./image_to_image` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
-    "            model_key = (model_id, \"xpu\")\n",
+    "            model_key = (model_id, \"cuda\")\n",
     "            prompt = prompt_text.value\n",
     "            num_images = num_images_slider.value\n",
     "            image_url = image_url_text.value\n",
@@ -491,9 +429,8 @@
     "            if not validators.url(image_url):\n",
     "                print(\"The input is not a valid URL. Using the default URL instead.\")\n",
     "                image_url = \"https://user-images.githubusercontent.com/786476/256401499-f010e3f8-6f8d-4e9f-9d1f-178d3571e7b9.png\"       \n",
-    "            #model = Img2ImgModel(model_id, device=\"xpu\")\n",
     "            if model_key not in model_cache:\n",
-    "                model_cache[model_key] = Img2ImgModel(model_id, device=\"xpu\")\n",
+    "                model_cache[model_key] = Img2ImgModel(model_id, device=\"cuda\")\n",
     "            model = model_cache[model_key]\n",
     "            enhancements = [\n",
     "            \"purple light\",\n",
@@ -562,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "---\n",
@@ -580,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -596,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "#### Reference and Guidelines for Models Used in This Notebook\n",
@@ -646,9 +583,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch GPU",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -660,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
