--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "SPDX-License-Identifier: Apache-2.0\n",
     "Copyright (c) 2025, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>\n",
-    "Copyright (c) 2023, Eduardo Alvarez <eduardo.a.alvarez@intel.com>"
+    "Copyright (c) 2023, Eduardo Alvarez <eduardo.a.alvarez@intel.com>\n",
+    "NOTICE: Original was modified to support NVIDIA GPUs"
    ]
   },
   {
@@ -62,10 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
     "%pip install langchain accelerate transformers datasets tiktoken chromadb sentence_transformers langchain-community ipywidgets --no-warn-script-location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -93,16 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import sys\n",
     "import os\n",
     "import requests\n",
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "### RAGBot Class Implementation\n",
@@ -153,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "### Customizing Your RAG LLM Chatbot Experience\n",
@@ -328,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Disclaimer for Using Large Language Models\n",
@@ -546,9 +543,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.7",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch27"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -560,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
