--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -12,7 +12,8 @@
    },
    "source": [
     "SPDX-License-Identifier: Apache-2.0\n",
-    "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>"
+    "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>\n",
+    "NOTICE: Original was modified to support NVIDIA GPUs"
    ]
   },
   {
@@ -61,12 +62,8 @@
     "from pathlib import Path\n",
     "\n",
     "!echo \"Installation in progress, please wait...\"\n",
-    "# !{sys.executable} -m pip cache purge > /dev/null\n",
     "\n",
-    "# Comment out the following installation commands after their first execution.\n",
-    "# !{sys.executable} -m pip install torch==2.3.1+cxx11.abi torchvision==0.18.1+cxx11.abi torchaudio==2.3.1+cxx11.abi intel-extension-for-pytorch==2.3.110+xpu oneccl_bind_pt==2.3.100+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\n",
-    "# !{sys.executable} -m pip install --upgrade transformers accelerate validators diffusers --user --no-warn-script-location > /dev/null\n",
-    "# !{sys.executable} -m pip install --upgrade pillow ipywidgets ipython invisible-watermark huggingface-hub --user --no-warn-script-location > /dev/null\n",
+    "%pip install transformers accelerate validators diffusers pillow ipywidgets invisible-watermark huggingface-hub matplotlib\n",
     "\n",
     "!echo \"Installation completed.\"\n",
     "\n",
@@ -88,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +112,6 @@
     "import requests\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import intel_extension_for_pytorch as ipex  # Used for optimizing PyTorch models\n",
     "from PIL import Image\n",
     "\n",
     "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler"
@@ -124,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "---\n",
@@ -137,11 +132,9 @@
     "\n",
     "- **Pipeline Loading**: The `_load_pipeline` function is where we bring the pre-trained model onboard. This sets the stage for all our text-to-image transformations.\n",
     "\n",
-    "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension For PyTorch (IPEX) to ensure our model runs fast!.\n",
-    "\n",
     "- **The Grand Finale - Image Generation**: The `generate_images` method is where dreams meet reality. It interprets the textual prompts, consults with the model, and then crafts images that encapsulate the essence of the prompts. You can choose the model, provide a prompt and specify the number of images.\n",
     "\n",
-    "Intrigued? Dive into the code below and see how we've tailored the image generation pipeline, ensuring it's optimized for Intel GPUs.\n",
+    "Intrigued? Dive into the code below and see how we've tailored the image generation pipeline.\n",
     "\n",
     "---\n"
    ]
@@ -149,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -164,7 +157,7 @@
     "    Text2ImgModel is a class for generating images based on text prompts using a pretrained model.\n",
     "\n",
     "    Attributes:\n",
-    "    - device: The device to run the model on. Default to \"xpu\" - Intel dGPUs.\n",
+    "    - device: The device to run the model on. Default to \"cuda\"\n",
     "    - pipeline: The loaded model pipeline.\n",
     "    - data_type: The data type to use in the model.\n",
     "    \"\"\"\n",
@@ -172,9 +165,8 @@
     "    def __init__(\n",
     "        self,\n",
     "        model_id_or_path: str,\n",
-    "        device: str = \"xpu\",\n",
+    "        device: str = \"cuda\",\n",
     "        torch_dtype: torch.dtype = torch.bfloat16,\n",
-    "        optimize: bool = True,\n",
     "        enable_scheduler: bool = False,\n",
     "        warmup: bool = False,\n",
     "    ) -> None:\n",
@@ -183,9 +175,8 @@
     "\n",
     "        Parameters:\n",
     "        - model_id_or_path: The identifier or path of the pretrained model.\n",
-    "        - device: The device to run the model on. Default is \"xpu\".\n",
+    "        - device: The device to run the model on. Default is \"cuda\".\n",
     "        - torch_dtype: The data type to use in the model. Default is torch.bfloat16.\n",
-    "        - optimize: Whether to optimize the model after loading. Default is True.\n",
     "        \"\"\"\n",
     "\n",
     "        self.device = device\n",
@@ -193,15 +184,6 @@
     "            model_id_or_path, torch_dtype, enable_scheduler\n",
     "        )\n",
     "        self.data_type = torch_dtype\n",
-    "        if optimize:\n",
-    "            start_time = time.time()\n",
-    "            #print(\"Optimizing the model...\")\n",
-    "            self.optimize_pipeline()\n",
-    "            #print(\n",
-    "            #    \"Optimization completed in {:.2f} seconds.\".format(\n",
-    "            #        time.time() - start_time\n",
-    "            #    )\n",
-    "            #)\n",
     "        if warmup:\n",
     "            self.warmup_model()\n",
     "\n",
@@ -224,14 +206,8 @@
     "        \"\"\"\n",
     "\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"/opt/intel/big_data/GenAI/diffusion/{model_id_or_path}\")  \n",
-    "        \n",
-    "        if model_path.exists():\n",
-    "            #print(f\"Loading the model from {model_path}...\")\n",
-    "            load_path = model_path\n",
-    "        else:\n",
-    "            print(\"Using the default path for models...\")\n",
-    "            load_path = model_id_or_path\n",
+    "\n",
+    "        load_path = model_id_or_path\n",
     "\n",
     "        pipeline = DiffusionPipeline.from_pretrained(\n",
     "            load_path,\n",
@@ -243,42 +219,9 @@
     "            pipeline.scheduler = DPMSolverMultistepScheduler.from_config(\n",
     "                pipeline.scheduler.config\n",
     "            )\n",
-    "        if not model_path.exists():\n",
-    "            try:\n",
-    "                print(f\"Attempting to save the model to {model_path}...\")\n",
-    "                pipeline.save_pretrained(f\"{model_path}\")\n",
-    "                print(\"Model saved.\")\n",
-    "            except Exception as e:\n",
-    "                print(f\"An error occurred while saving the model: {e}. Proceeding without saving.\")\n",
+    "\n",
     "        pipeline = pipeline.to(self.device)\n",
     "        #print(\"Model loaded.\")\n",
-    "        return pipeline\n",
-    "\n",
-    "    def _optimize_pipeline(self, pipeline: DiffusionPipeline) -> DiffusionPipeline:\n",
-    "        \"\"\"\n",
-    "        Optimizes the model for inference using ipex.\n",
-    "\n",
-    "        Parameters:\n",
-    "        - pipeline: The model pipeline to be optimized.\n",
-    "\n",
-    "        Returns:\n",
-    "        - pipeline: The optimized model pipeline.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        for attr in dir(pipeline):\n",
-    "            try:\n",
-    "                if isinstance(getattr(pipeline, attr), nn.Module):\n",
-    "                    setattr(\n",
-    "                        pipeline,\n",
-    "                        attr,\n",
-    "                        ipex.optimize(\n",
-    "                            getattr(pipeline, attr).eval(),\n",
-    "                            dtype=pipeline.text_encoder.dtype,\n",
-    "                            inplace=True,\n",
-    "                        ),\n",
-    "                    )\n",
-    "            except AttributeError:\n",
-    "                pass\n",
     "        return pipeline\n",
     "\n",
     "    def warmup_model(self):\n",
@@ -297,13 +240,6 @@
     "                time.time() - start_time\n",
     "            )\n",
     "        )\n",
-    "\n",
-    "    def optimize_pipeline(self) -> None:\n",
-    "        \"\"\"\n",
-    "        Optimizes the current model pipeline.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        self.pipeline = self._optimize_pipeline(self.pipeline)\n",
     "\n",
     "    def generate_images(\n",
     "        self,\n",
@@ -327,7 +263,7 @@
     "\n",
     "        images = []\n",
     "        for i in range(num_images):\n",
-    "            with torch.xpu.amp.autocast(\n",
+    "            with torch.cuda.amp.autocast(\n",
     "                enabled=True if self.data_type != torch.float32 else False,\n",
     "                dtype=self.data_type,\n",
     "            ):\n",
@@ -353,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "---\n",
@@ -377,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,12 +390,12 @@
     "            print(\"\\nOnce generated, images will be saved to `./output` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
-    "            model_key = (model_id, \"xpu\")\n",
+    "            model_key = (model_id, \"cuda\")\n",
     "            if model_key not in model_cache:\n",
-    "                model_cache[model_key] = Text2ImgModel(model_id, device=\"xpu\")\n",
+    "                model_cache[model_key] = Text2ImgModel(model_id, device=\"cuda\")\n",
     "            prompt = prompt_text.value\n",
     "            num_images = num_images_slider.value\n",
-    "            #model = Text2ImgModel(model_id, device=\"xpu\")\n",
+    "            #model = Text2ImgModel(model_id, device=\"cuda\")\n",
     "            model = model_cache[model_key]\n",
     "            \n",
     "            enhancements = [\n",
@@ -542,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "---\n",
@@ -561,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -577,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -627,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "source": [
     "#### Reference and Guidelines for Models Used in This Notebook\n",
@@ -672,25 +608,13 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch GPU",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -702,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
