--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -18,8 +18,6 @@
    "source": [
     "## Retrieval Augmented Generation (RAG) with Hugging Face Transformers on Intel® Data Center GPU\n",
     "\n",
-    "**Note:** Please select the \"PyTorch 2.7\" kernel when running this notebook\n",
-    "\n",
     "#### 1. Retrieval Augmented Generation (RAG):\n",
     "Retrieval Augmented Generation (RAG) is a novel approach that combines the strengths of large-scale retrieval systems with the generative capabilities of transformer models like Falcon. In our RAG-based system, implemented on Intel® Data Center GPU Max Series 1100, when a question is posed, relevant documents or passages are retrieved from a corpus, and then fed alongside the query to the language model. This two-step process enables the model to leverage both external knowledge from the corpus and its internal knowledge to produce more informed and contextually accurate responses.\n",
     "\n",
@@ -63,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain accelerate transformers datasets tiktoken chromadb sentence_transformers langchain-community ipywidgets --no-warn-script-location"
+    "%pip install langchain accelerate transformers datasets tiktoken chromadb sentence_transformers langchain-community ipywidgets pandas --no-warn-script-location"
    ]
   },
   {
