Removed kernel suggestion from notebooks (all notebooks will work with Python 3 kernel)

--- a/Handwritten_Digit_Recognition.ipynb
+++ b/Handwritten_Digit_Recognition.ipynb
@@ -16,9 +16,7 @@
     "\n",
     "original source: https://github.com/amitrajitbose/handwritten-digit-recognition\n",
     "\n",
-    "code adapted for EECE.486 mps and xpu devices\n",
-    "\n",
-    "**Note**: Please select the **PyTorch GPU** kernel before running this notebook"
+    "code adapted for EECE.486 mps and xpu devices\n"
    ]
   },
   {
