--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -39,9 +39,7 @@
     "\n",
     "This guide is designed to be straightforward and user-friendly. No deep technical knowledge required, just a spark of creativity and a dash of curiosity.\n",
     "\n",
-    "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n",
-    "\n",
-    "**Note:** Please select the \"PyTorch GPU\" kernel when running this notebook"
+    "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n"
    ]
   },
   {
