--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -37,8 +37,7 @@
     "\n",
     "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
-    "Ready to turn your words into visuals?, Let's get started!\n",
-    "**Note**: Please select the \"PyTorch GPU\" kernel when running this notebook"
+    "Ready to turn your words into visuals?, Let's get started!"
    ]
   },
   {
