--- a/ControlNet_PythonCodeTutorial.ipynb
+++ b/ControlNet_PythonCodeTutorial.ipynb
@@ -34,16 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install transformers diffusers accelerate controlnet_aux opencv-contrib-python ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+    "%pip install transformers diffusers accelerate controlnet_aux opencv-contrib-python ipywidgets mediapipe"
    ]
   },
   {
@@ -53,15 +44,6 @@
    },
    "source": [
     "# Open Pose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -1837,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
