--- a/gemma_finetuning.ipynb
+++ b/gemma_finetuning.ipynb
@@ -89,67 +89,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6",
-   "metadata": {},
-   "source": [
-    "We'll now make sure to optimize our environment for the Intel GPU by setting the appropriate environment variables and configuring the number of cores and threads. This will ensure we get the best performance out of our hardware! ⚡"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import warnings\n",
-    "# warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "# import os\n",
-    "# import psutil\n",
-    "\n",
-    "# num_physical_cores = psutil.cpu_count(logical=False)\n",
-    "# num_cores_per_socket = num_physical_cores // 2\n",
-    "\n",
-    "# os.environ[\"TOKENIZERS_PARALLELISM\"] = \"0\"\n",
-    "# #HF_TOKEN = os.environ[\"HF_TOKEN\"]\n",
-    "\n",
-    "# # # Set the LD_PRELOAD environment variable\n",
-    "# # ld_preload = os.environ.get(\"LD_PRELOAD\", \"\")\n",
-    "# # conda_prefix = os.environ.get(\"CONDA_PREFIX\", \"\")\n",
-    "# # # Improve memory allocation performance, if tcmalloc is not available, please comment this line out\n",
-    "# # os.environ[\"LD_PRELOAD\"] = f\"{ld_preload}:{conda_prefix}/lib/libtcmalloc.so\"\n",
-    "\n",
-    "# # Reduce the overhead of submitting commands to the GPU\n",
-    "# os.environ[\"SYCL_PI_LEVEL_ZERO_USE_IMMEDIATE_COMMANDLISTS\"] = \"1\"\n",
-    "# # reducing memory accesses by fusing SDP ops\n",
-    "# os.environ[\"ENABLE_SDP_FUSION\"] = \"1\"\n",
-    "# # set openMP threads to number of physical cores\n",
-    "# os.environ[\"OMP_NUM_THREADS\"] = str(num_physical_cores)\n",
-    "# # Set the thread affinity policy\n",
-    "# os.environ[\"OMP_PROC_BIND\"] = \"close\"\n",
-    "# # Set the places for thread pinning\n",
-    "# os.environ[\"OMP_PLACES\"] = \"cores\"\n",
-    "\n",
-    "# print(f\"Number of physical cores: {num_physical_cores}\")\n",
-    "# print(f\"Number of cores per socket: {num_cores_per_socket}\")\n",
-    "# print(f\"OpenMP environment variables:\")\n",
-    "# print(f\"  - OMP_NUM_THREADS: {os.environ['OMP_NUM_THREADS']}\")\n",
-    "# print(f\"  - OMP_PROC_BIND: {os.environ['OMP_PROC_BIND']}\")\n",
-    "# print(f\"  - OMP_PLACES: {os.environ['OMP_PLACES']}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8",
    "metadata": {},
@@ -183,6 +122,9 @@
     "import threading\n",
     "import torch\n",
     "from IPython.display import display, HTML\n",
+    "\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "\n",
     "import torch\n",
     "\n",
@@ -512,7 +454,7 @@
     "    max_grad_norm=0.6,\n",
     "    weight_decay=0.01,\n",
     "    group_by_length=True,\n",
-    "    max_seq_length=512,\n",
+    "    max_length=512,\n",
     "    packing = True,\n",
     ")\n",
     "\n",
@@ -576,8 +518,7 @@
     "model.save_pretrained(tuned_model)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\"\n",
-    "#model2 = ipex.optimize_transformers(model)  # optimize the model using `ipex`"
+    "tokenizer.padding_side = \"right\""
    ]
   },
   {
@@ -661,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.push_to_hub()"
+    "# trainer.push_to_hub()"
    ]
   },
   {
@@ -741,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
