--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -35,8 +35,6 @@
     "\n",
     "Imagine taking a picture and a few words of inspiration, and watching as they transform into a new visual representation. With Stable Diffusion, this imaginative exercise becomes a tangible experience. Want to see a landscape shift from day to night? Or perhaps turn a doodle into a detailed artwork? Dive in to explore these possibilities and more.\n",
     "\n",
-    "Behind the scenes, we're harnessing the power of Intel® Data Center GPU Max Series GPUs.\n",
-    "\n",
     "This guide is designed to be straightforward and user-friendly. No deep technical knowledge required, just a spark of creativity and a dash of curiosity.\n",
     "\n",
     "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n"
@@ -52,15 +50,6 @@
     "!echo \"Installation in progress...\"\n",
     "%pip install transformers accelerate validators diffusers tensorboardX pillow ipywidgets invisible-watermark\n",
     "!echo \"Installtion complete...\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -170,7 +159,7 @@
     "            StableDiffusionImg2ImgPipeline: The loaded pipeline.\n",
     "        \"\"\"\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"/opt/intel/big_data/GenAI/{model_id_or_path}\")\n",
+    "        model_path = Path(f\"~/.cahce/huggingface/{model_id_or_path}\")\n",
     "        \n",
     "        if model_path.exists():\n",
     "            #print(f\"Loading the model from {model_path}...\")\n",
@@ -367,7 +356,7 @@
     "    num_images = 2\n",
     "    model_ids = [\n",
     "        \"runwayml/stable-diffusion-v1-5\",\n",
-    "        \"stabilityai/stable-diffusion-2-1\",\n",
+    "        \"sd2-community/stable-diffusion-2-1\",\n",
     "    ]    \n",
     "    model_dropdown = widgets.Dropdown(\n",
     "        options=model_ids,\n",
@@ -531,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "c8b8d596-dea7-4153-acd5-8ea1e00d5054",
    "metadata": {},
    "source": [
     "#### Reference and Guidelines for Models Used in This Notebook\n",
@@ -553,7 +542,7 @@
     "    ```\n",
     "\n",
     "##### stabilityai/stable-diffusion-2-1\n",
-    "- **Model card:** [stabilityai/stable-diffusion-2-1](https://huggingface.co/stabilityai/stable-diffusion-2-1)\n",
+    "- **Model card:** [sd2-community/stable-diffusion-2-1](https://huggingface.co/sd2-community/stable-diffusion-2-1) (mirror of [stabilityai/stable-diffusion-2-1](https://huggingface.co/stabilityai/stable-diffusion-2-1))\n",
     "- **License:** CreativeML Open RAIL++-M License\n",
     "- **Reference:**\n",
     "    ```bibtex\n",
@@ -595,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
