--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Large Language Models (LLMs) have a wide range of applications, but they can also be fun to experiment with. Here, we'll use some simple pre-trained models to explore text generation interactively.\n",
     "\n",
-    "Powered by Intel® Data Center GPU Max 1100s, this notebook provides a hands-on experience that doesn't require deep technical knowledge. Whether you're a student, writer, educator, or just curious about AI, this guide is designed for you.\n",
+    "This notebook provides a hands-on experience that doesn't require deep technical knowledge. Whether you're a student, writer, educator, or just curious about AI, this guide is designed for you.\n",
     "\n",
     "Ready to try it out? Let's set up our environment and start exploring the world of text generation with LLMs!\n"
    ]
@@ -65,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "05343d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_CACHE_PATH = \"/opt/intel/big_data/GenAI/llm_models\"\n",
+    "MODEL_CACHE_PATH = \"~/.cache/huggingface\"\n",
     "class ChatBotModel:\n",
     "    \"\"\"\n",
     "    ChatBotModel is a class for generating responses based on text prompts using a pretrained model.\n",
@@ -791,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
