--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -84,15 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5",
    "metadata": {},
    "outputs": [],
@@ -337,7 +328,7 @@
     "    out = widgets.Output()\n",
     "    output_dir = \"output\"\n",
     "    model_ids = [\n",
-    "        \"stabilityai/stable-diffusion-2-1\",\n",
+    "        \"sd2-community/stable-diffusion-2-1\",\n",
     "        \"CompVis/stable-diffusion-v1-4\",\n",
     "    ]    \n",
     "    \n",
@@ -583,7 +574,7 @@
     "    ```\n",
     "\n",
     "##### stabilityai/stable-diffusion-2\n",
-    "- **Model card:** [stabilityai/stable-diffusion-2](https://huggingface.co/stabilityai/stable-diffusion-2)\n",
+    "- **Model card:** [sd2-community/stable-diffusion-2-1](https://huggingface.co/sd2-community/stable-diffusion-2-1) (mirror of [stabilityai/stable-diffusion-2-1](https://huggingface.co/stabilityai/stable-diffusion-2-1))\n",
     "- **License:** CreativeML Open RAIL++-M License\n",
     "- **Reference:**\n",
     "    ```bibtex\n",
@@ -625,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
