--- a/Handwritten_Digit_Recognition.ipynb
+++ b/Handwritten_Digit_Recognition.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "original source: https://github.com/amitrajitbose/handwritten-digit-recognition\n",
     "\n",
-    "code adapted for EECE.486 mps and xpu devices\n"
+    "code adapted for EECE.4860/5860\n"
    ]
   },
   {
@@ -32,15 +32,6 @@
    },
    "source": [
     "### Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -120,8 +111,6 @@
     "                              ])\n",
     "\n",
     "# Download and load the training data\n",
-    "#trainset = datasets.MNIST('MNIST_data/', download=True, train=True, transform=transform)\n",
-    "#valset = datasets.MNIST('MNIST_data/', download=True, train=False, transform=transform)\n",
     "trainset = datasets.MNIST('MNIST_data/', download=False, train=True, transform=transform)\n",
     "valset = datasets.MNIST('MNIST_data/', download=False, train=False, transform=transform)\n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True)\n",
@@ -566,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
