--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -65,15 +65,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5",
    "metadata": {},
@@ -110,12 +101,12 @@
     "\n",
     "from tqdm import tqdm\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.document_loaders import TextLoader\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.indexes import VectorstoreIndexCreator\n",
-    "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain_classic.chains import LLMChain\n",
+    "from langchain_classic.prompts import PromptTemplate\n",
+    "from langchain_classic.document_loaders import TextLoader\n",
+    "from langchain_classic.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_classic.indexes import VectorstoreIndexCreator\n",
+    "from langchain_classic.embeddings import HuggingFaceEmbeddings\n",
     "from datasets import load_dataset"
    ]
   },
@@ -555,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
